--- a/Web Application/frontend/package.json
+++ b/Web Application/frontend/package.json
@@ -6,7 +6,7 @@
   "private": false,
   "scripts": {
     "dev": "next",
-    "build": "react-scripts build",
+    "build": "next build",
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
@@ -38,24 +38,11 @@
     "react-chartjs-2": "4.3.1",
     "react-dom": "18.2.0",
     "react-perfect-scrollbar": "1.5.8",
-    "react-scripts": "^5.0.1",
     "uuid": "9.0.0",
     "yup": "0.32.11"
   },
   "devDependencies": {
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
