--- a/Web Application/frontend/package.json
+++ b/Web Application/frontend/package.json
@@ -29,6 +29,7 @@
     "chart.js": "3.9.1",
     "date-fns": "2.29.3",
     "dotenv": "^16.0.3",
+    "firebase": "^9.15.0",
     "formik": "2.2.9",
     "google-map-react": "^2.2.0",
     "next": "^12.3.0",
