--- a/Web Application/functions/package.json
+++ b/Web Application/functions/package.json
@@ -14,11 +14,13 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
+    "firebase-admin": "^10.0.2",
+    "firebase-auth": "^0.1.2",
+    "firebase-functions": "^3.18.0",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
