--- a/Web Application/frontend/package.json
+++ b/Web Application/frontend/package.json
@@ -38,9 +38,10 @@
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^8.0.4",
         "react-router": "^6.4.1",
-        "react-router-dom": "^6.4.1",
+        "react-router-dom": "^6.6.1",
         "react-scripts": "^5.0.1",
         "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^9.1.1",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
         "simplebar": "^5.3.8",
