--- a/Mobile Application/smart_safety/pubspec.yaml
+++ b/Mobile Application/smart_safety/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.4.0
   firebase_auth: ^4.2.1
   firebase_database: ^10.0.7
+  flutter_bluetooth_serial: ^0.4.0
 
 dev_dependencies:
   flutter_test:
