--- a/Mobile Application/smart_safety/pubspec.yaml
+++ b/Mobile Application/smart_safety/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.2.1
   firebase_database: ^10.0.7
   flutter_bluetooth_serial: ^0.4.0
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
