--- a/Web Application/functions/package.json
+++ b/Web Application/functions/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
+    "emus": "firebase emulators:start",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
