--- a/Web Application/functions/package.json
+++ b/Web Application/functions/package.json
@@ -19,9 +19,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.15.0",
-    "firebase-admin": "^10.0.2",
+    "firebase-admin": "^10.3.0",
     "firebase-auth": "^0.1.2",
-    "firebase-functions": "^3.18.0",
+    "firebase-functions": "^3.24.1",
+    "firestore-tools": "^1.0.2",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
